--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">androidkotlin</string>
+    <string name="Chēnsōman">Chēnsōman</string>
+    <string name="Japanese">Japanese</string>
+    <string name="Korean">Korean</string>
+    <string name="전기톱맨">전기톱맨</string>
+    <string name="English">English</string>
+    <string name="ChainsawMan">Chainsaw\nMan</string>
+    <string name="Arabic">Arabic</string>
+    <string name="Chainsaw">رجل بالمنشار</string>
+    <string name="Spanish">Spanish</string>
+    <string name="HombreMotosierra">Hombre Motosierra</string>
+    <string name="Indonesian">Indonesian</string>
+    <string name="ManusiaGergaji">Manusia\nGergaji</string>
+    <string name="affirmation1">I am strong.</string>
+    <string name="affirmation2">I believe in myself.</string>
+    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
+    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
+    <string name="affirmation5">I have so much to be grateful for.</string>
+    <string name="affirmation6">Good things are always coming into my life.</string>
+    <string name="affirmation7">New opportunities await me at every turn.</string>
+    <string name="affirmation8">I have the courage to follow my heart.</string>
+    <string name="affirmation9">Things will unfold at precisely the right time.</string>
+    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
 </resources>
+
+
